Kipi-plugins 1.2.0 - Release date: XX/XX/2010
------------------------------------------------------------------------

NEW FEATURES:

PicasaWebExport : Tool dialog redesigned with same layout than Flickr, Facebook, etc.
HTMLExport      : Show screenshot alongside theme description.

BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 225001 : GPSSync         : Google map is empty.
002 ==> 225162 : PicasaWebExport : Picasaweb export no progress bar.
003 ==> 225164 : PicasaWebExport : Picasaweb export waiting mouse cursor without ending.
004 ==> 203541 : PicasaWebExport : Select images to upload.
005 ==> 225316 : General         : ExpoBlend won't compile even with dependencies all right.
006 ==> 225396 : SendImages      : "Mozilla" MUA option is broken.
007 ==> 223492 : HtmlExport	 : Show screenshot alongside theme description.
008 ==>